--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
+    "typescript": "^4.7.4"
   }
 }
