--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "initial-demo",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:=3000}",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "autoprefixer": "^10.4.2",
+    "next": "12.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^18.6.1",
-    "@types/react": "^18.0.15",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
-    "typescript": "^4.7.4"
+    "@types/react": "^17.0.38",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "typescript": "^4.5.5"
   }
 }
